apps/scoring/manifests/deployments/scoring-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: &labels
    tier: scoring-service
  name: tao-scoring-service
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
      # - image: tao/scoring/service/be
      #   resources: {}
      #   name: dispatch
      #   envFrom:
      #   - secretRef:
      #       name: scoring-service-be-env
      #   volumeMounts: *volumes
      #   command:
      #   - /bin/sh
      #   - -c
      #   - |
      #     php bin/console cache:clear -vvv
      #     php bin/console ss:delivery-execution:schedules-dispatch
      - image: tao/scoring/service/be
        resources: {}
        name: worker
        volumeMounts: *volumes
        command:
        - /bin/sh
        - -c
        - |
          php bin/console cache:clear -vvv
          # sleep infinity
          php bin/console messenger:consume grader-publications grader-scores grader-executions scores submissions ags
      - image: tao/scoring/service/be
        resources: {}
        name: be
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts: *volumes
      restartPolicy: Always
      volumes:
      - name: deliver-data
        hostPath:
          path: /data/tao/deliver
---
apiVersion: v1
kind: Service
metadata:
  name: tao-scoring-service-be
  labels: &labels
    tier: scoring-service
spec:
  selector: *labels
  ports:
  - port: 80
    targetPort: 80
    name: http
